# versio-firmware-cmake-template

./: CMakeLists.txt  LICENSE  README.md  flash.sh
src/: main.cpp
